# androtator

./: .gitmodules  CMakeLists.txt  README.md  build_hamlib.sh  polarwidget.cpp  polarwidget.h  widget.cpp  widget.h  widget.ui
